--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark shadow">
     <div class="container justify-content-between">
-      <a class="navbar-brand fw-bold" href="#">Andres & Diana’s</a>
+      <a class="navbar-brand fw-bold" href="#"> perrochucho & Diana’s</a>
       <a href="login.html" class="btn btn-outline-light">
         <i class="bi bi-box-arrow-in-right"></i> Iniciar Sesión
       </a>
