--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
         <div class="col-md-4 mb-3">
           <h5>Contacto</h5>
           <p>IZA - BOYACA - COLOMBIA </p>
-          <p>Email: contacto@barbernailspro.com</p>
+          <p>Email: kevinandresdiaz158@gmail.com</p>
           <p>Tel: +57 314 4778275</p>
         </div>
       </div>
       <div class="text-center mt-3">
-        <p>© 2025 BarberNails Pro. Todos los derechos reservados.</p>
+        <p>© 2025 Andres & Diana’s . Todos los derechos reservados.</p>
       </div>
     </div>
   </footer>
