--- a/login.html
+++ b/login.html
@@ -96,7 +96,7 @@
       <button type="submit" class="btn btn-pink">Entrar</button>
     </form>
     <div class="form-link">
-      ¿No tienes cuenta? <a href="register.html">Regístrate aquí</a>
+      ¿No tienes cuenta? <a href="404.html">Regístrate aquí</a>
     </div>
   </div>
 
